--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,12 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container  {
+     max-width : 800px;  
+     font-family: sans-serif;
+     margin:0 auto;
+     color: #3c3a3a;
+     padding-top: 60px;
+     padding-left: 10px;
+     padding-right: 10px;
+}
